     longer accept non-bool types.

  ** Added the gdb.Symbol.is_artificial attribute.

  ** Added gdb.Block.subblocks.  Returns a list of blocks contained in that
     block.

  ** Added gdb.Symbol.domain.  Contains the domain of the symbol.

  ** Added gdb.Architecture.void_type. Returns a gdb.Type representing "void"
     type for that architecture.

* Debugger Adapter Protocol changes

  ** The "scopes" request will now return a scope holding global
     variables from the stack frame's compilation unit.

  ** The "scopes" request will return a "returnValue" scope holding
     the return value from the latest "stepOut" command, when
     appropriate.

  ** The "launch" and "attach" requests were rewritten in accordance
     with some clarifications to the spec.  Now they can be sent at
     any time after the "initialized" event, but will not take effect
     (or send a response) until after the "configurationDone" request
     has been sent.

  ** The "variables" request will not return artificial symbols.

* New commands

show jit-reader-directory
  Show the name of the directory that "jit-reader-load" uses for
  relative file names.

set style line-number foreground COLOR
set style line-number background COLOR
set style line-number intensity VALUE
  Control the styling of line numbers printed by GDB.

set style command foreground COLOR
set style command background COLOR
set style command intensity VALUE
  Control the styling of GDB commands when displayed by GDB.

set style title foreground COLOR
set style title background COLOR
set style title intensity VALUE
  This style now applies to the header line of lists, for example the
  first line of the output of "info breakpoints".  Previous uses of
  this style have been replaced with the new "command" style.

set warn-language-frame-mismatch [on|off]
show warn-language-frame-mismatch
  Control the warning that is emitted when specifying a language that
  does not match the current frame's language.
